--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Huy Phan | Intro section with dropdown navigation</title>
   </head>
   <body>
-    <div id="app"></div>
+    <main></main>
     <footer>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/huyphan2210" target="_blank">Huy Phan</a>.
