--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Huy Phan | Intro section with dropdown navigation</title>
   </head>
   <body>
+    <header></header>
     <main></main>
     <footer>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/huyphan2210" target="_blank">Huy Phan</a>.
     </footer>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/app.ts"></script>
   </body>
 </html>
